fix(client): correct XML editor scrolling
Broken in Electron@7 / Chrome 78.

--- a/client/src/app/tabs/xml/XMLEditor.less
+++ b/client/src/app/tabs/xml/XMLEditor.less
@@ -13,6 +13,12 @@
   .CodeMirror {
     height: 100%;
     font-size: 13px;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
   }
 
 }
